<resources>
    <string name="app_name">Application</string>
    <string name="main_screen">Main screen</string>
    <string name="screen_1">Screen #1</string>
    <string name="screen_2">Screen #2</string>
    <string name="screen_3">Screen #3</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="hidden">Hidden</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="add_alpha">Add alpha</string>
    <string name="remove_alpha">Remove alpha</string>
</resources>