<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/screenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_screen"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/screenButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/screenButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/screenButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_3"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>